# dagster-gsheet-automation-project

./: .gitignore  README.md
dagster-gsheet-loader/: README.md  pyproject.toml  setup.cfg  setup.py
dagster-gsheet-loader/dagster_gsheet_loader/: definitions.py
