[project]
name = "dagster_gsheet_loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_gsheet_loader.definitions"
code_location_name = "dagster_gsheet_loader"

[tool.setuptools.packages.find]
exclude=["dagster_gsheet_loader_tests"]
